Allocated backend process

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["djmoney"]
+  "cSpell.words": [
+    "contactimage",
+    "djmoney",
+    "followus",
+    "galleryimg",
+    "homehours",
+    "numbertext"
+  ]
 }
